--- a/ProductCatalog-Web/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/_81_MVC_Roller.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
 </head>
 <body>
     <header>
@@ -23,23 +25,25 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
                         </li>
                     </ul>
-                    <div class="navbar-nav d-flex">
+                    <div class="navbar-nav d-flex align-items-center">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            @if (User.IsInRole("Admin") || User.IsInRole("ContentManager"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="@(User.IsInRole("Admin") ? "Admin" : "ContentManager")"
-                                       asp-controller="Home" asp-action="Index">
-                                        @(User.IsInRole("Admin") ? "Admin Panel" : "Content Manager Panel")
-                                    </a>
-                                </li>
-                            }
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyAccount">My Account (@User.Identity.Name)</a>
+                                <a class="btn btn-outline-success ms-3" asp-area="" asp-controller="Cart" asp-action="Index">
+                                    <i class="bi bi-cart3"></i> My Cart
+                                </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-person"></i> @User.Identity.Name
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="MyAccount">My User Information</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Order" asp-action="MyOrders">My Orders</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-danger" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                                </ul>
                             </li>
                         }
                         else
@@ -52,7 +56,13 @@
                             </li>
                         }
 
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary ms-3" asp-area="" asp-controller="CustomerSupport" asp-action="Index">
+                                <i class="bi bi-headset"></i> Customer Support
+                            </a>
+                        </li>
                     </div>
+
                     <form method="get" asp-controller="Product" asp-action="Index" class="d-flex" role="search">
                         <input type="hidden" name="CatId" value="@Context.Request.Query["CatId"]" />
                         <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
