--- a/ProductCatalog-Web/Views/Product/Index.cshtml
+++ b/ProductCatalog-Web/Views/Product/Index.cshtml
@@ -3,44 +3,43 @@
 @{
     ViewData["Title"] = "All Products";
 }
-<div class="row">
-    <div class="col-md-3">
-        <hr />
-        @await Component.InvokeAsync("Category")
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-2 position-fixed start-0 vh-100 bg-light p-3 border-end shadow-sm">
+            <hr />
+            @await Component.InvokeAsync("Category")
 
-        <div class="my-3 p-3 border rounded bg-light shadow-sm">
-            <h4 class="mb-3">Price Filter</h4>
-            <form asp-action="" method="get">
-                <div class="mb-2">
-                    <label for="MinPrice" class="form-label">Minimum Price</label>
-                    <input type="number" name="MinPrice" id="MinPrice" class="form-control" placeholder="E.g.: 100" min="0">
-                </div>
-                <div class="mb-2">
-                    <label for="MaxPrice" class="form-label">Maximum Price</label>
-                    <input type="number" name="MaxPrice" id="MaxPrice" class="form-control" placeholder="E.g.: 1000" min="0">
-                </div>
-                <button type="submit" class="btn btn-success w-100">Apply</button>
-            </form>
+            <div class="my-2 p-2 border rounded bg-white shadow-sm">
+                <h4 class="mb-3">Price Filter</h4>
+                <form asp-action="Index" method="get">
+                    <div class="mb-2">
+                        <label for="MinPrice" class="form-label">Minimum Price</label>
+                        <input type="number" name="MinPrice" id="MinPrice" class="form-control" placeholder="E.g.: 100" min="0">
+                    </div>
+                    <div class="mb-2">
+                        <label for="MaxPrice" class="form-label">Maximum Price</label>
+                        <input type="number" name="MaxPrice" id="MaxPrice" class="form-control" placeholder="E.g.: 1000" min="0">
+                    </div>
+                    <button type="submit" class="btn btn-success w-100">Apply</button>
+                </form>
+            </div>
         </div>
-    </div>
-    <div class="col-md-9">
-        <div class="row">
-            @if (Model is not null && Model.Count() > 0)
-            {
-                @foreach (var item in Model)
+        <div class="col-12 offset-lg-2">
+            <div class="row">
+                @if (Model is not null && Model.Count() > 0)
                 {
-                    @await Html.PartialAsync("_ProductCard", item)
+                    @foreach (var item in Model)
+                    {
+                        @await Html.PartialAsync("_ProductCard", item)
+                    }
                 }
-            }
-            else
-            {
-                <div class="alert alert-warning" role="alert">
-                    There is no product we can show you in this category.
-                </div>
-            }
+                else
+                {
+                    <div class="alert alert-warning" role="alert">
+                        There is no product we can show you in this category.
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
-
-
-
